--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=api
+      - POSTGRES_DB=pokeapi
     ports:
       - "5432:5432"
   # Starts the pgadmin
