UserRepository Created | Sorted Imports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   # Starts the PostgreSQL DataBase
-  db:
+  pokedb:
     image: postgres:12
     restart: always
     environment:
@@ -12,10 +12,10 @@ services:
     ports:
       - "5432:5432"
   # Starts the pgadmin
-  pgadmin:
+  pokepgadmin:
     image: dpage/pgadmin4
     depends_on:
-      - db
+      - pokedb
     environment:
       - PGADMIN_DEFAULT_EMAIL=pokeapi@poke.mon
       - PGADMIN_DEFAULT_PASSWORD=pokemon
@@ -31,7 +31,27 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      - pokedb
+  # Starts the users db
+  usersdb:
+    image: postgres:12
+    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=pokeusers
+    ports:
+      - "5433:5433"
+  # Starts the pgadmin
+  userspgadmin:
+    image: dpage/pgadmin4
+    depends_on:
+      - usersdb
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=pokeapi@poke.mon
+      - PGADMIN_DEFAULT_PASSWORD=pokemon
+    ports:
+      - "5051:81"
   # Starts the UsersAPI
   pokeusers:
     build: pokeusers/
@@ -42,4 +62,4 @@ services:
     ports:
       - "8002:8002"
     depends_on:
-      - db
+      - usersdb
