--- a/pokeusers/requirements.txt
+++ b/pokeusers/requirements.txt
@@ -5,11 +5,14 @@ appdirs==1.4.4
 async-exit-stack==1.0.1
 async-generator==1.10
 asyncpg==0.23.0
+bcrypt==3.2.0
 black==21.7b0
 certifi==2021.5.30
+cffi==1.14.6
 charset-normalizer==2.0.3
 click==7.1.2
 dnspython==2.1.0
+ecdsa==0.17.0
 email-validator==1.1.3
 fastapi==0.66.0
 graphene==2.1.9
@@ -24,16 +27,21 @@ Jinja2==2.11.3
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
 orjson==3.6.0
+passlib==1.7.4
 pathspec==0.8.1
 promise==2.3
+pyasn1==0.4.8
+pycparser==2.20
 pydantic==1.8.2
 pypika-tortoise==0.1.1
 python-dotenv==0.18.0
+python-jose==3.3.0
 python-multipart==0.0.5
 pytz==2021.1
 PyYAML==5.4.1
 regex==2021.7.6
 requests==2.26.0
+rsa==4.7.2
 Rx==1.6.1
 six==1.16.0
 starlette==0.14.2
