--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: "3.7"
 
 services:
   # ---PokeAPI---
-
   # Starts the PostgreSQL DataBase
   pokedb:
     image: postgres:12
@@ -30,14 +29,13 @@ services:
     command: bash -c "python3 app.py"
     volumes:
       - ./pokeapi:/code
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
     depends_on:
       - pokedb
 
   # ---UsersAPI---
-
-  # Starts the users db
+  # Starts the PostgreSQL DataBase
   usersdb:
     image: postgres:12
     restart: always
@@ -64,7 +62,18 @@ services:
     command: bash -c "python3 app.py"
     volumes:
       - ./pokeusers:/code
-    ports:
-      - "8002:8002"
+    # ports:
+    #   - "8002:8000"
     depends_on:
       - usersdb
+
+  # ---Nginx---
+  nginx:
+    image: nginx:latest
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - pokeapi
+      - pokeusers
