--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,20 +32,20 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=pokeusers
+      - POSTGRES_DB=usersapi
     ports:
       - "5433:5433"
   # Starts the UsersAPI
-  pokeusers:
-    build: pokeusers/
+  usersapi:
+    build: usersapi/
     restart: always
     command: bash -c "python3 app.py"
     volumes:
-      - ./pokeusers:/code
+      - ./usersapi:/code
     depends_on:
       - usersdb
     environment:
-      - database_url=postgres://postgres:postgres@usersdb/pokeusers
+      - database_url=postgres://postgres:postgres@usersdb/usersapi
 
   # ---PGAdmin---
   pgadmin:
@@ -68,4 +68,4 @@ services:
       - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - pokeapi
-      - pokeusers
+      - usersapi
