--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -6,7 +6,7 @@ server {
   }
 
   location /api/v1/users {
-    proxy_pass http://pokeusers:8000/api/v1/users;
+    proxy_pass http://usersapi:8000/api/v1/users;
   }
 
 }
