--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -9,4 +9,8 @@ server {
     proxy_pass http://usersapi:8000/api/v1/users;
   }
 
+  location /api/v1/digiapi {
+    proxy_pass http://digiapi:8000/api/v1/digiapi;
+  }
+
 }
